--- a/chart-sensor.css
+++ b/chart-sensor.css
@@ -1,5 +1,8 @@
 body {
   font: 10px sans-serif;
+  background: rgb(238, 238, 238);
+  font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .axis path,
