--- a/chart-sensor.css
+++ b/chart-sensor.css
@@ -1,7 +1,9 @@
 body {
   font: 10px sans-serif;
   background: rgb(238, 238, 238);
-  font-size: 1em;
+}
+
+h2 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
